<resources>
    <string name="app_name">Orion Viajes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel_label">Título Del Viaje</string>
    <string name="budget_label">Presupuesto</string>
    <string name="currency_label">Moneda</string>
    <string name="startDatetv">Fecha De Inicio:</string>
    <string name="endDatetv">Fecha De Fin:</string>

    <string name="startDate_label">Seleccionar fecha de inicio</string>
    <string name="endDate_label">Seleccionar fecha de fin</string>
    <string name="bntAdd">+</string>
    <string name="travel_empty_label">Todavía no tenés viajes creados.</string>
    <string name="btnAddItem">Agregar</string>
    <string name="btnCancelItem">Cancelar</string>
    <string name="tvTo">/</string>
    <string name="tvEditTravel">Editar</string>
    <string name="btnManualExpense">Rellenar</string>
    <string name="btnScanExspense">Escanear</string>
    <string name="btnAddExpense">Agregar</string>
    <string name="myTravels">Mis Viajes</string>
    <string name="createTravel">Nuevo Viaje</string>
    <string name="editTravel">Editar Viaje</string>
    <string name="splash_placeholder_text">ORION Travel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Registrarme</string>
    <string name="action_login">Ingresar</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">La contraseña debe tener al menos 5 caractere</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shared_preferences_key">"ar.edu.ort.orionviajes_shared_preferences"</string>
    <string name="shared_preferences_token_key">"TOKEN"</string>
    <string name="orion_api_token_header_key">"x-auth-token"</string>
    <string name="expense_label">Título Del Gasto</string>
    <string name="category_label">Categoría</string>
    <string name="paymentMethod_label">Método De Pago</string>
    <string name="amount_label">Monto</string>
    <string name="date_label">Seleccionar Fecha</string>
    <string name="deteleTavelLabel">Eliminar</string>
    <string name="areYouShureDeleteTravel">Estas seguro de que quieres eliminar este viaje?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="successDeletedTravel">Viaje eliminado con éxito!</string>
    <string name="successUpdateTravel">Viaje actualizado con éxito!</string>
    <string name="successCreateTravel">Viaje creado con éxito!</string>
    <string name="errorLoadingTravels">Error al cargar los viajes</string>
    <string name="successCreateExpense">Gasto creado con éxito!</string>
    <string name="successUpdateExpense">Gasto actualizado con éxito!</string>
    <string name="successDeletedExpense">Gasto eliminado con éxito!</string>
    <string name="areYouShureDeleteExpense">Estas seguro de que quieres eliminar este gasto?</string>
    <string name="remaining_budget">Presupuesto restante:</string>
    <string name="spends_label">Gastos</string>
    <string name="spendCategory">Gastos por Categoría</string>
    <string name="comida">Comida</string>
    <string name="bebida">Bebida</string>
    <string name="transporte">Transporte</string>
    <string name="alojamiento">Alojamiento</string>
    <string name="entretenimiento">Entretenimiento</string>
    <string name="otros">Otros</string>
    <string name="create_expense_label">Agregar Gasto</string>
    <string name="edit_expense_label">Editar Gasto</string>
    <string name="dashboard_label">Reportes</string>
    <string name="add">Crear</string>
    <string name="delete">Eliminar</string>
    <string name="update">Guardar</string>
    <string name="scan_expense">Ecanear Gasto</string>
    <string name="required">Requerido</string>
    <string name="invalidCredentials">\"Credenciales inválidas\"</string>
    <string name="somethingWentWrong">Ups!... Algo salió mal</string>
    <string name="emptyEmailandPass">Los campos Email y Constraseña no pueden estar vacíos!</string>
    <string name="invalidEmail">Dirección de Email inválida</string>
    <string name="input">Para registrarte, ingresá tus datos:</string>
    <string name="successRegister">Registro exitoso!</string>
    <string name="passwordMin">Debe tener al menos 6 carácteres.</string>
    <string name="invalidInputs">Email o Contraseña inválidos.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="takePicture">Capturar</string>
    <string name="spendPaymentMethod">Gastos por Método de Pago</string>
    <string name="profile">Mi Perfil</string>
    <string name="recognizeText">Reconocer Texto</string>
    <string name="emptyFields">Los campos no pueden estar vacíos!</string>


</resources>