<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_create_travel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateTravelFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/travelTitle_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/travel_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_title_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/travelCurrency_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/currency_label"
        app:layout_constraintTop_toBottomOf="@+id/travelTitle_til"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/travelBudget_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/budget_label"
        app:layout_constraintTop_toBottomOf="@+id/travelCurrency_til"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_budget_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/startDate_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/startDate_label"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/travelBudget_til"
        tools:layout_editor_absoluteX="28dp" />

    <TextView
        android:id="@+id/endDate_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/endDate_label"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@+id/startDate_til"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:contentDescription="@string/btnAddItem"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate_til" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCancelTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/btnCancelItem"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate_til" />


</androidx.constraintlayout.widget.ConstraintLayout>